--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUX VENTUS A-2</title>
     <link rel="stylesheet" href="styles.ccs">
+
 </head>
 <body>
-    
+    <header>
+        <div>
+            <div class="logo">
+                <link rel="stylesheet" href="./pictures/LUX VENTUS LOGO.png">
+
+            </div>
+            <div class="menu">
+                <a href="#">Fashion</a>
+                <a href="#">Lifestyle</a>
+                <a href="#">Spiritual</a>
+                <a href="#">Mental Health</a>
+                <a href="#" class="Contact Us button">Contact Us</a>
+
+            </div>
+            <div class="serch button">
+                <link rel="stylesheet" href="./pictures/serch button.png">
+            </div>
+
+
+        </div>
+    </header>
 </body>
 </html>
